<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VentaBoletas">

    <TextView
        android:id="@+id/txtTitVenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloVenta"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/txtNumAsientos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/numAsientos" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnComprar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comprar"
            android:layout_weight="1"
            android:padding="5dp"
            android:backgroundTint="@color/teal_200"/>

        <Button
            android:id="@+id/btnRegresaCompra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/regresar"
            android:backgroundTint="@color/purple_200"/>
    </LinearLayout>


</LinearLayout>